--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- /*add by hamid naghipour*/ -->
         <h1 class="mdl-typography--text-center mdl-color-text--white" dir="ltr"> athamid.ir </h1>
 
-        <h2 class="mdl-typography--text-center mdl-color-text--white" dir="ltr">web developer and designer.</h2>
+        <h2 class="mdl-typography--text-center mdl-color-text--white" dir="ltr">web designer / developer.</h2>
 
         <p class="mdl-typography--text-center mdl-color-text--white" dir="ltr">all your content here!</p>
 
